fix: z-indexes for cross fading

--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@ height: 1080px;
 position: absolute;
 top: 0;
 left: 0;
-z-index: 1;
+z-index: 2;
 background: url(../img/home.svg);
 }
 .home h1 {
